--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             
             <h1 class="responsive-headline" style="color:rgb(255, 255, 255)">Amit Kumar Maurya</h1>
             <h3>I'm a Indian based <span>Senior Analyst at Capgemini</span>, graduated from <span>National Institute of Technology
-               Manipur </span> in <span>Computer Science and Engineering</span> I am skilled in Big data tools like talend, spark, hive etc.
+               Manipur </span> in <span>Computer Science and Engineering</span> I am skilled in Python, C++, Java, and Big data tools like pyspark, databricks, hive etc.
                and ready to use all of my learning for the projects and industries.   <a class="smoothscroll" href="#about">start scrolling</a>
             and learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
             <hr />
