modified:   index.html

--- a/index.html
+++ b/index.html
@@ -217,13 +217,14 @@
                <div class="twelve columns">
 
                   <h3>Classification of Breast Cancer Histopathological Images</h3>
-                  <p class="info">Senior UX Designer <span>&bull;</span> <em class="date">March 2010 - Present</em></p>
+                  <p class="info">Research Intern<span>&bull;</span> <em class="date">May, 2019 - July, 2019</em></p>
 
                   <p>
-                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-                  Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
-                  ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
-                  Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. Nullam dictum felis eu pede mollis pretium.
+					Successfully created a deep learning model to classify breast cancer histopathological images. I implemented different reseach papers algorithm based on it to verify its accuracy.
+                  
+					<span>&bull;</span>  Achieved 95% accuracy on binary class classification.
+                    <br>
+					<span>&bull;</span>  A decent accuracy on multi class classification.
                   </p>
 
                </div>
@@ -234,8 +235,8 @@
 
                <div class="twelve columns">
 
-                  <h3>University Database Management (March 2019-April 2019)</h3>
-                  <p class="info">UX Designer <span>&bull;</span> <em class="date">March 2007 - February 2010</em></p>
+                  <h3>University Database Management </h3>
+                  <p class="info">Mini Project <span>&bull;</span> <em class="date">March, 2019 - April 2019</em></p>
 
                   <p>
                   This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
@@ -246,14 +247,14 @@
 
                </div>
 
-            <div> <!-- item end -->
+            </div> <!-- item end -->
 
             <div class="row item">
 
                <div class="twelve columns">
 
-                  <h3>Sentiment Analysis Through Voice (December 2018)</h3>
-                  <p class="info">Senior UX Designer <span>&bull;</span> <em class="date">March 2010 - Present</em></p>
+                  <h3>Sentiment Analysis Through Voice </h3>
+                  <p class="info">Intern<span>&bull;</span> <em class="date">December, 2018</em></p>
 
                   <p>
                   Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
@@ -272,8 +273,8 @@
 
                <div class="twelve columns">
 
-                  <h3>Modern Periodic Table (Mar 2018 - Apr 2018)</h3>
-                  <p class="info">Senior UX Designer <span>&bull;</span> <em class="date">March 2010 - Present</em></p>
+                  <h3>Modern Periodic Table </h3>
+                  <p class="info">Mini Project<span>&bull;</span> <em class="date">March, 2018 - April, 2018</em></p>
 
                   <p>
                   Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
