modified:   index.html

--- a/index.html
+++ b/index.html
@@ -841,18 +841,18 @@
          <div class="twelve columns">
 
             <ul class="social-links">
-               <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+               <li><a href="https://www.facebook.com/amit.k.maurya.16"><i class="fa fa-facebook"></i></a></li>
+               <li><a href="https://twitter.com/amit_k_maurya_1"><i class="fa fa-twitter"></i></a></li>
                <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-               <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-               <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+               <li><a href="https://www.linkedin.com/in/amitkmaurya16/"><i class="fa fa-linkedin"></i></a></li>
+               <li><a href="https://www.instagram.com/amit.k.maurya.16/"><i class="fa fa-instagram"></i></a></li>
                <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-               <li><a href="#"><i class="fa fa-skype"></i></a></li>
+               <li><a href="live:amit.k.maurya.16"><i class="fa fa-skype"></i></a></li>
             </ul>
 
             <ul class="copyright">
-               <li>&copy; Copyright 2014 CeeVee</li>
-               <li>Design by <a href="http://www.styleshout.com/" title="Styleshout" target="_blank">Styleshout</a></li>   
+               <li>&copy; Copyright 2021</li>
+               <li>Design by <a" title="Styleshout" target="_blank">Amit Kumar Maurya</a></li>   
             </ul>
 
          </div>
